# python-redis

./: .gitignores  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: build  codestyle  setup  update
src/python_redis/: import_redis.py  py_client.py  redis_json.py  redisx.py  redisx_hello_world.py
tests/: test_python_redis.py
